# ImgCorrection_SDK

./: CMakeLists.txt
app/: CMakeLists.txt  test.cpp
cmake/fetch/: OpenCV.cmake
lib/: CMakeLists.txt
lib/ColorCorrection/: CMakeLists.txt  parameter.txt
lib/ColorCorrection/include/: ColorCorrection.h
lib/ColorCorrection/src/: ColorCorrection.cpp
